<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_picker_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
...
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                app:strokeColor="@color/pocketpaint_color_picker_separation_color"
                app:strokeWidth="2dp">

                <View
                    android:id="@+id/color_picker_current_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start" />

                <View
                    android:id="@+id/color_picker_new_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp" />

        <org.catrobat.paintroid.colorpicker.AlphaSliderView
            android:id="@+id/color_alpha_slider"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone" />
...
