/*
 * Paintroid: An image manipulation application for Android.
 * Copyright (C) 2010-2022 The Catrobat Team
 * (<http://developer.catrobat.org/credits>)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
package org.catrobat.paintroid.test.espresso.dialog

import android.app.Activity
import android.app.Instrumentation.ActivityResult
import android.content.Intent
import android.content.pm.ActivityInfo
import android.graphics.Color
import android.os.Environment
import android.view.View
import androidx.test.espresso.Espresso
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.matcher.IntentMatchers
import androidx.test.espresso.intent.rule.IntentsTestRule
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.rule.ActivityTestRule
import androidx.test.rule.GrantPermissionRule
import org.catrobat.paintroid.MainActivity
import org.catrobat.paintroid.R
import org.catrobat.paintroid.colorpicker.HSVColorPickerView
import org.catrobat.paintroid.colorpicker.PresetSelectorView
import org.catrobat.paintroid.colorpicker.RgbSelectorView
import org.catrobat.paintroid.common.CATROBAT_IMAGE_ENDING
import org.catrobat.paintroid.common.PAINTROID_PICTURE_NAME
import org.catrobat.paintroid.common.PAINTROID_PICTURE_PATH
import org.catrobat.paintroid.test.espresso.util.DrawingSurfaceLocationProvider
import org.catrobat.paintroid.test.espresso.util.EspressoUtils
import org.catrobat.paintroid.test.espresso.util.UiInteractions
import org.catrobat.paintroid.test.espresso.util.UiMatcher
import org.catrobat.paintroid.test.espresso.util.wrappers.ColorPickerViewInteraction
import org.catrobat.paintroid.test.espresso.util.wrappers.DrawingSurfaceInteraction
import org.catrobat.paintroid.test.espresso.util.wrappers.ToolPropertiesInteraction
import org.catrobat.paintroid.test.espresso.util.wrappers.TopBarViewInteraction
import org.catrobat.paintroid.test.utils.ScreenshotOnFailRule
import org.catrobat.paintroid.tools.ToolReference
import org.hamcrest.Matchers
import org.hamcrest.core.AllOf.allOf
import org.junit.Assert
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import java.io.File
import java.util.Objects

@RunWith(AndroidJUnit4::class)
class ColorDialogIntegrationTest {
    @get:Rule
    var launchActivityRule = ActivityTestRule(
        MainActivity::class.java
    )
    @get:Rule
    val grantPermissionRule: GrantPermissionRule = EspressoUtils.grantPermissionRulesVersionCheck()

    @get:Rule
    var launchActivityRuleWithIntent = IntentsTestRule(
        MainActivity::class.java, false, false
    )

    @get:Rule
    var screenshotOnFailRule = ScreenshotOnFailRule()
    private var toolReference: ToolReference? = null

    @Before
    fun setUp() {
        toolReference = launchActivityRule.activity.toolReference
    }

    @After
    fun tearDown() {
        val imagesDirectory =
                Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_DOWNLOADS).toString()
        val pathToFile = imagesDirectory + File.separator + IMAGE_NAME + "." + CATROBAT_IMAGE_ENDING
        val imageFile = File(pathToFile)
        if (imageFile.exists()) {
            imageFile.delete()
        }
    }

    private fun getColorById(colorId: Int) =
        launchActivityRule.activity.resources.getColor(colorId)

    @Test
    fun testStandardTabSelected() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_PRESET_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun testCorrectColorAfterApplyWithoutNewColorSelected() {
        val initialPaint = toolReference!!.tool!!.drawPaint
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
            .onPositiveButton()
            .perform(ViewActions.click())
        Assert.assertEquals(
            initialPaint.color.toLong(),
            toolReference!!.tool!!.drawPaint.color.toLong()
        )
    }

    @Test
    fun testTabsAreSelectable() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_PRESET_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_hsv)
            )
        ).perform(ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_HSV_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_rgba)
            )
        ).perform(ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_RGBA_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_preset)
            )
        ).perform(ViewActions.scrollTo(), ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_PRESET_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun dontShowAlphaRelatedStuffFromCatroidFormulaEditor() {
        launchActivityRule.activity.model.isOpenedFromCatroid = true
        launchActivityRule.activity.model.isOpenedFromFormulaEditorInCatroid = true
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(Matchers.not(ViewMatchers.isDisplayed())))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_hsv)
            )
        ).perform(ViewActions.click())
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(Matchers.not(ViewMatchers.isDisplayed())))
        ColorPickerViewInteraction.onColorPickerView()
            .onPositiveButton()
            .perform(ViewActions.click())
        val currentSelectColor = toolReference!!.tool!!.drawPaint.color
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_rgba)
            )
        ).perform(ViewActions.click())
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_picker_alpha_row))
            .check(ViewAssertions.matches(Matchers.not(ViewMatchers.isDisplayed())))
        Espresso.onView(withId(R.id.color_picker_color_rgb_hex))
            .check(
                ViewAssertions.matches(
                    withText(
                        String.format(
                            "#%02X%02X%02X",
                            Color.red(
                                currentSelectColor
                            ),
                            Color.green(
                                currentSelectColor
                            ),
                            Color.blue(
                                currentSelectColor
                            )
                        )
                    )
                )
            )
    }

    @Test
    fun showAlphaSliderFromCatroid() {
        launchActivityRule.activity.model.isOpenedFromCatroid = true
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_hsv)
            )
        ).perform(ViewActions.click())
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun showAlphaSliderIfNotCatroidFlagSet() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_hsv)
            )
        ).perform(ViewActions.click())
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun dontShowAlphaSliderInRgb() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_rgba)
            )
        ).perform(ViewActions.click())
        Espresso.onView(withId(R.id.color_picker_base_layout))
            .perform(ViewActions.swipeUp())
        Espresso.onView(withId(R.id.color_alpha_slider))
            .check(ViewAssertions.matches(Matchers.not(ViewMatchers.isDisplayed())))
    }

    @Test
    fun testColorSelectionChangesNewColorViewColor() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        val resources = launchActivityRule.activity.resources
        val presetColors =
            resources.obtainTypedArray(R.array.pocketpaint_color_picker_preset_colors)
        for (counterColors in 0 until presetColors.length()) {
            ColorPickerViewInteraction.onColorPickerView()
                .performClickColorPickerPresetSelectorButton(counterColors)
            val arrayColor = presetColors.getColor(counterColors, Color.BLACK)
            Espresso.onView(
                allOf(
                    withId(R.id.color_picker_new_color_view), Matchers.instanceOf(
                        View::class.java
                    )
                )
            )
                .check(ViewAssertions.matches(UiMatcher.withBackgroundColor(arrayColor)))
        }
        presetColors.recycle()
    }

    @Test
    fun testColorNewColorViewChangesStandard() {
        val resources = launchActivityRule.activity.resources
        val presetColors =
            resources.obtainTypedArray(R.array.pocketpaint_color_picker_preset_colors)
        for (counterColors in 0 until presetColors.length()) {
            ColorPickerViewInteraction.onColorPickerView()
                .performOpenColorPicker()
            ColorPickerViewInteraction.onColorPickerView()
                .performClickColorPickerPresetSelectorButton(counterColors)
            ColorPickerViewInteraction.onColorPickerView()
                .onPositiveButton()
                .perform(ViewActions.click())
            val arrayColor = presetColors.getColor(counterColors, Color.BLACK)
            val selectedColor = toolReference!!.tool!!.drawPaint.color
            Assert.assertEquals(
                "Color in array and selected color not the same",
                arrayColor.toLong(),
                selectedColor.toLong()
            )
        }
        presetColors.recycle()
    }

    @Test
    fun testCurrentColorViewHasInitialColor() {
        val selectedColor = toolReference!!.tool!!.drawPaint.color
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        ColorPickerViewInteraction.onColorPickerView()
            .checkCurrentViewColor(selectedColor)
    }

    @Test
    fun testCurrentColorViewDoesNotChangeColor() {
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        val initialColor = toolReference!!.tool!!.drawPaint.color
        val resources = launchActivityRule.activity.resources
        val presetColors =
            resources.obtainTypedArray(R.array.pocketpaint_color_picker_preset_colors)
        for (counterColors in 0 until presetColors.length()) {
            ColorPickerViewInteraction.onColorPickerView()
                .performClickColorPickerPresetSelectorButton(counterColors)
            Espresso.onView(
                allOf(
                    withId(R.id.color_picker_current_color_view), Matchers.instanceOf(
                        View::class.java
                    )
                )
            )
                .check(ViewAssertions.matches(UiMatcher.withBackgroundColor(initialColor)))
        }
        presetColors.recycle()
    }

    @Test
    fun testColorPickerDialogOnBackPressedSelectedColorShouldChange() {
        val initialColor = toolReference!!.tool!!.drawPaint.color
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_preset)
            )
        ).perform(ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_PRESET_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        val presetColors =
            launchActivityRule.activity.resources.obtainTypedArray(R.array.pocketpaint_color_picker_preset_colors)
        val colorToSelectIndex = presetColors.length() / 2
        val colorToSelect = presetColors.getColor(colorToSelectIndex, Color.WHITE)
        presetColors.recycle()
        Assert.assertNotEquals(
            "Selected color should not be the same as the initial color",
            colorToSelect.toLong(),
            initialColor.toLong()
        )
        ColorPickerViewInteraction.onColorPickerView()
            .performClickColorPickerPresetSelectorButton(colorToSelectIndex)

        Espresso.onView(ViewMatchers.isRoot()).perform(ViewActions.pressBack())
        val currentSelectedColor = toolReference!!.tool!!.drawPaint.color
        Assert.assertEquals(
            "Selected color has not changed",
            colorToSelect.toLong(),
            currentSelectedColor.toLong()
        )
    }

    @Suppress("LongMethod")
    @Test
    fun testIfRGBSeekBarsDoChangeColor() {
        val resources = launchActivityRule.activity.resources
        val presetColors =
            resources.obtainTypedArray(R.array.pocketpaint_color_picker_preset_colors)
        ColorPickerViewInteraction.onColorPickerView()
            .performOpenColorPicker()
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_preset)
            )
        ).perform(ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_PRESET_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        ColorPickerViewInteraction.onColorPickerView()
            .performClickColorPickerPresetSelectorButton(0)
        Espresso.onView(
            allOf(
                withId(R.id.color_picker_tab_icon),
                UiMatcher.withBackground(R.drawable.ic_color_picker_tab_rgba)
            )
        ).perform(ViewActions.click())
        Espresso.onView(
            ViewMatchers.withClassName(
                Matchers.containsString(
                    TAB_VIEW_RGBA_SELECTOR_CLASS
                )
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_red))
            .perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_red)).check(
            ViewAssertions.matches(
                allOf(
                    ViewMatchers.isDisplayed(),
                    withText(R.string.color_red),
                    UiMatcher.withTextColor(getColorById(R.color.pocketpaint_color_picker_rgb_red))
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_green)).check(
            ViewAssertions.matches(
                allOf(
                    ViewMatchers.isDisplayed(),
                    withText(R.string.color_green),
                    UiMatcher.withTextColor(getColorById(R.color.pocketpaint_color_picker_rgb_green))
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_blue)).check(
            ViewAssertions.matches(
                allOf(
                    ViewMatchers.isDisplayed(),
                    withText(R.string.color_blue),
                    UiMatcher.withTextColor(getColorById(R.color.pocketpaint_color_picker_rgb_blue))
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_alpha))
            .perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_alpha)).check(
            ViewAssertions.matches(
                allOf(
                    ViewMatchers.isDisplayed(),
                    withText(R.string.color_alpha),
                    UiMatcher.withTextColor(getColorById(R.color.pocketpaint_color_picker_hex_black))
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_textview_red))
            .perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_red))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_green))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_blue))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_alpha))
            .perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_alpha))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_color_rgb_hex)).perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_color_rgb_hex))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_rgb_red_value)).perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_rgb_red_value))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_rgb_green_value))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_rgb_blue_value))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.color_picker_rgb_alpha_value)).perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_rgb_alpha_value))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(
            Matchers.allOf(
                withText(TEXT_PERCENT_SIGN),
                ViewMatchers.hasSibling(withId(R.id.color_picker_rgb_alpha_value))
            )
        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        val currentSelectedColor = presetColors.getColor(0, Color.BLACK)
        Espresso.onView(withId(R.id.color_picker_rgb_red_value)).perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_rgb_red_value)).check(
            ViewAssertions.matches(
                withText(
                    Color.red(currentSelectedColor).toString()
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_rgb_green_value)).check(
            ViewAssertions.matches(
                withText(
                    Color.green(currentSelectedColor).toString()
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_rgb_blue_value)).check(
            ViewAssertions.matches(
                withText(
                    Color.blue(currentSelectedColor).toString()
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_rgb_alpha_value)).perform(ViewActions.scrollTo())
        Espresso.onView(withId(R.id.color_picker_rgb_alpha_value)).check(
            ViewAssertions.matches(
                withText(
                    (Color.alpha(currentSelectedColor) / 2.55f).toInt().toString()
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_red))
            .perform(ViewActions.scrollTo(), UiInteractions.touchCenterLeft())
        Espresso.onView(withId(R.id.color_picker_rgb_red_value)).check(
            ViewAssertions.matches(
                withText(
                    TEXT_RGB_MIN
                )
            )
        )
        Espresso.onView(withId(R.id.color_picker_color_rgb_seekbar_red))
